--- a/src/components/Public/Checkout/styles.css
+++ b/src/components/Public/Checkout/styles.css
@@ -12,6 +12,17 @@
     margin-left: 58px;
 }
 
+.checkout .asterix {
+    font-weight: 300;
+    padding-left: 2px;
+    position: absolute;
+}
+
+.checkout .asterix-text {
+    margin: 6px 0 0 59px;
+    font-size: 15px;
+}
+
 .checkout .page-header {
     padding-left: 0;
     height: 58px;
@@ -137,15 +148,6 @@
     margin-top: 25px;
 }
 
-.checkout .basket .back {
-    //color: #c04c9c;
-    //margin-left: 55px;
-    //float: left;
-    //width: 40%;
-    //margin-left: 55px;
-    //margin-top: 20px;
-}
-
 .checkout .basket .front,
 .checkout .basket .back {
     color: #c04c9c;
@@ -186,9 +188,6 @@
     border: 1px solid #999;
     border-radius: 3px;
     padding: 13px 25px;
-    //max-height: 400px;
-    //height: 45px;
-    //transition: all 2s ease-in-out;
 }
 
 .checkout fieldset.expand {
@@ -378,11 +377,6 @@
     font-size: 28px;
     height: 42px;
 }
-.checkout .rating .stars span:hover:before,
-.checkout .rating .stars span:hover ~ span:before {
-    //content: "\2605";
-    //position: absolute;
-}
 
 .checkout .rating .stars span.filled:before {
     content: "\2605";
@@ -452,10 +446,6 @@
 
 .checkout .form-buttons button {
     float: left
-}
-
-.checkout .form-buttons .paypal-button {
-    //width: 68% !important;
 }
 
 .checkout .form-buttons .stripe-button {
@@ -795,6 +785,7 @@ thead tr {
 .checkout .basket input[type="checkbox"] {
     display: none;
 }
+
 .checkout .payment-type-wrapper input[type="radio"] + label {
     position: relative;
     display: inline-block;
@@ -817,6 +808,7 @@ thead tr {
     margin-bottom: 0;
     line-height: 25px;
 }
+
 .checkout .basket input[type="checkbox"] + label:before,
 .checkout .basket input[type="checkbox"] + label:after {
     content: '';
@@ -858,28 +850,32 @@ thead tr {
     -webkit-box-shadow: inset 0 0 0 0.2em white, inset 0 0 0 1em white;
     box-shadow: inset 0 0 0 0.2em white, inset 0 0 0 1em white;
 }
+
 .checkout .payment-type-wrapper input[type="radio"] + label:hover:before {
     -webkit-transition: all .3s ease;
     transition: all .3s ease;
     -webkit-box-shadow: inset 0 0 0 0.3em white, inset 0 0 0 1em #c04c9c;;
     box-shadow: inset 0 0 0 0.3em white, inset 0 0 0 1em #c04c9c;;
 }
+
 .checkout .payment-type-wrapper input[type="radio"]:checked + label:before {
     -webkit-transition: all .3s ease;
     transition: all .3s ease;
     -webkit-box-shadow: inset 0 0 0 0.2em white, inset 0 0 0 1em #c04c9c;
     box-shadow: inset 0 0 0 0.2em white, inset 0 0 0 1em #c04c9c;
 }
+
 .checkout .basket input[type="checkbox"] + label:before {
     content: '✗';
     border-radius: 4px;
-    //background-color: #c04c9c;
     color: white;
     border: 2px solid #c04c9c;
 }
+
 .checkout .basket input[type="checkbox"] + label:hover:before {
     color: #c04c9c;
 }
+
 .checkout .basket input[type="checkbox"]:checked + label:before {
     background-color: #c04c9c;
     color: white;
@@ -898,6 +894,10 @@ thead tr {
         width: 100%;
         padding: 0 30px;
         box-sizing: border-box;
+    }
+
+    .checkout .asterix-text {
+        margin: 6px 0 0 0;
     }
 
     table {
@@ -919,6 +919,10 @@ thead tr {
 @media only screen and (max-width: 768px) and (orientation: portrait) {
     .checkout {
         padding-top: 250px;
+    }
+
+    .checkout .asterix-text {
+        margin: 6px 0 0 0;
     }
 
     .checkout .page-header {
@@ -952,6 +956,10 @@ thead tr {
 @media only screen and (max-width: 768px) and (orientation: landscape) {
     .checkout {
         padding-top: 250px;
+    }
+
+    .checkout .asterix-text {
+        margin: 6px 0 0 0;
     }
 
     .checkout .page-header {
@@ -1006,6 +1014,18 @@ thead tr {
 @media only screen and (max-width: 500px) {
     .checkout {
         padding-top: 230px;
+    }
+
+    .checkout #payment-form {
+        margin-top: 25px;
+    }
+
+    .checkout .asterix-text {
+        margin: -17px 0 5px 0;
+    }
+
+    .checkout .disclaimer p {
+        margin: 8px 0 5px 0;
     }
 
     .header.show + .checkout {
