--- a/src/components/Public/Staff/styles.css
+++ b/src/components/Public/Staff/styles.css
@@ -392,11 +392,21 @@
         padding: 5px 20px 20px;
     }
 
+    .staff .card {
+        width: 100%;
+    }
+
     .staff .card .photo-wrapper {
-        height: 240px;
+        height: 350px;
     }
 
     .staff .card .photo-wrapper img {
        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    .staff .card .photo-wrapper {
+        height: 300px;
     }
 }
