--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -16,6 +16,10 @@ h4 {
     font-weight: 500;
 }
 
+input[type="text"] {
+    color: #000 !important;
+}
+
 @media only screen and (max-width: 500px) {
     body {
         background: #fff;
