--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -21,6 +21,10 @@ input[type="text"] {
     font-weight: 400 !important;
 }
 
+button, select {
+    font-weight: 400;
+}
+
 @media only screen and (max-width: 500px) {
     body {
         background: #fff;
