--- a/src/components/Private/Login/styles.css
+++ b/src/components/Private/Login/styles.css
@@ -17,10 +17,6 @@
     width: 300px;
     margin: 80px auto;
     min-height: 100%;
-
-    /* Equal to height of footer */
-    /* But also accounting for potential margin-bottom of last child */
-    //margin-bottom: -310px;
 }
 
 .push {
@@ -62,6 +58,32 @@
     font-weight: 300;
     margin-top: 16px;
     box-sizing: border-box;
+    border: none;
+    border-radius: 3px;
+}
+
+@media only screen and (max-width: 768px) {
+    .login .page-header {
+        background-color: #fff;
+        position: static;
+        display: block;
+        text-align: left;
+        padding: 20px 40px 0;
+        margin-top: 220px;
+    }
+
+    .login .page-header h1 {
+        color: #C04C9C;
+        padding: 0;
+        margin-left: 0 !important;
+    }
+
+    .login .login-wrapper {
+        padding: 0 40px;
+        width: 100%;
+        box-sizing: border-box;
+        margin: 0;
+    }
 }
 
 @media only screen and (max-width: 500px) {
@@ -69,17 +91,19 @@
         background-color: #fff;
         position: static;
         display: block;
-        text-align: center;
-        padding-top: 20px;
-        padding-left: 0;
+        text-align: left;
+        padding: 20px 20px 0;
         margin-top: 220px;
     }
 
     .login .page-header h1 {
         color: #C04C9C;
+        padding: 0;
+        margin-left: 0 !important;
     }
 
     .login .login-wrapper {
-        margin: 0 auto;
+        padding: 0 20px;
+        margin: 0;
     }
 }
