--- a/src/components/Public/Payment/styles.css
+++ b/src/components/Public/Payment/styles.css
@@ -302,6 +302,7 @@
     cursor: pointer;
     border-radius: 3px;
     vertical-align: top;
+    margin-top: 1px;
 }
 
 .payment + .text-wrapper .total {
@@ -358,7 +359,7 @@
 }
 
 .payment + .text-wrapper .promo-textfield {
-    margin-right: 25px;
+    margin-right: 15px;
     display: inline-block;
     vertical-align: top;
 }
@@ -386,7 +387,7 @@
 
 .currency-wrapper {
     width: 100px;
-    margin-right: 25px;
+    margin-right: 15px;
     margin-top: 2px;
     display: inline-block;
 }
@@ -442,8 +443,8 @@
 
 .payment + .text-wrapper .promo-textfield input {
     display: block;
-    width: 150px;
-    height: 40px;
+    width: 110px;
+    height: 42px;
     border: 1px solid #888;
     box-sizing: border-box;
     padding: 10px;
@@ -452,7 +453,7 @@
     border-radius: 3px;
     text-align: center;
     font-weight: 200;
-    margin-top: 3px;
+    margin-top: 2px;
 }
 
 .info-text .percent-text {
@@ -823,11 +824,26 @@
         padding: 25px 40px 21px 40px;
         background-color: #C04C9C;
         overflow: hidden;
-        text-align: left;
     }
 
     .payment + .text-wrapper .total {
-        margin-left: 13px;
+        margin-left: 0;
+    }
+
+    .payment + .text-wrapper .spec {
+        margin-right: 15px;
+    }
+
+    .payment + .text-wrapper .promo-textfield {
+        margin-right: 10px;
+    }
+
+    .currency-wrapper {
+        margin-right: 10px;
+    }
+
+    .payment + .text-wrapper button {
+        margin-top: 2px;
     }
 
     .payment .preamble {
@@ -1005,13 +1021,14 @@
     .payment + .text-wrapper .total {
         color: #fff;
         font-size: 33px;
-        min-width: 320px;
         letter-spacing: 0;
         float: none;
         width: 100%;
-        margin: 0 auto;
-        text-align: center;
         display: block;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        min-width: 0;
     }
 
     .payment + .text-wrapper .spec {
@@ -1262,6 +1279,8 @@
     .payment + .text-wrapper .spec span {
         display: block;
         font-size: 15px !important;
+        min-width: 0;
+        margin-right: 0 !important;
     }
 
     .payment .info-text .promo {
@@ -1304,7 +1323,7 @@
     .payment + .text-wrapper .spec {
         width: 200px;
         margin-top: 2px;
-        display: inline-block;
+        min-width: 0 !important;
     }
 
     .payment + .text-wrapper .spec span:first-child {
