--- a/src/components/Public/Newsletter/styles.css
+++ b/src/components/Public/Newsletter/styles.css
@@ -1,13 +1,14 @@
 .newsletter {
-    padding: 25px 80px 45px 80px;
+    position: relative;
+    padding: 25px 80px 25px 200px;
     background-color: #c04c9c4d;
 }
 
 .newsletter .heading {
     color: #c04c9c;
     margin-top: 10px;
-    font-size: 37px;
-    text-align: center;
+    font-size: 26px;
+    text-align: left;
     margin-bottom: 10px;
     margin: 0;
 }
@@ -24,26 +25,28 @@
 .newsletter input[type="text"] {
     border: 1px solid #c04c9c;
     border-radius: 3px;
-    width: 70%;
+    width: 60%;
     height: 25px;
     padding: 10px;
     display: inline-block;
-    margin-top: 28px;
+    margin-top: 13px;
     vertical-align: top;
     text-align: left;
     font-size: 16px;
 }
 
 .newsletter img {
+    position: absolute;
+    left: 70px;
+    top: 40px;
     width: 110px;
     margin-right: 15px;
-    float: left;
     margin-top: -19px;
 }
 
 .newsletter .successMessage {
     color: #c04c9c;
-    margin-top: 5px;
+    margin-top: 10px;
     display: inline-block;
 }
 
@@ -60,24 +63,39 @@
     cursor: pointer;
     border-radius: 3px;
     vertical-align: top;
-    margin-top: 27px;
+    margin-top: 13px;
     margin-left: 10px;
 }
 
 @media only screen and (max-width: 1024px) {
     .newsletter {
-        padding: 25px 60px 40px 40px;
+        padding: 25px 60px 25px 200px
     }
 
     .newsletter input[type="text"] {
-        width: calc(100% - 309px);
+        width: 70%;
     }
 }
 
 @media only screen and (max-width: 768px) {
+    .newsletter {
+        position: relative;
+        padding: 25px 80px 25px 200px;
+        background-color: #c04c9c4d;
+    }
+
     .newsletter .heading {
-        margin-bottom: 20px;
-        font-size: 33px;
+        margin-bottom: 0px;
+        font-size: 28px;
+    }
+
+    .newsletter img {
+        position: absolute;
+        left: 70px;
+        top: 73px;
+        width: 110px;
+        margin-right: 15px;
+        margin-top: -19px;
     }
 
     .newsletter input[type="text"] {
@@ -92,16 +110,14 @@
     }
 
     .newsletter .heading {
-        font-size: 30px;
+        font-size: 23px;
         text-align: left;
-        padding-left: 84px;
+        padding-left: 5px;
         margin-bottom: 15px;
     }
 
     .newsletter img {
-        width: 72px;
-        position: absolute;
-        top: 45px;
+        display: none;
     }
 
     .newsletter input[type="text"] {
