--- a/src/components/Private/Encounter/styles.css
+++ b/src/components/Private/Encounter/styles.css
@@ -14,6 +14,7 @@
 
 .admin .admin-wrapper {
     margin: 0 auto;
+    display: none;
 }
 
 .admin .push {
@@ -21,7 +22,7 @@
 }
 
 .mobile-list {
-    display: none;
+    //display: none;
 }
 
 .admin-table td {
@@ -77,9 +78,140 @@
     cursor: pointer;
     outline: 0;
     position: absolute;
-    top: 187px;
-    right: 67px;
+    top: 111px;
+    right: 24px;
     border-radius: 3px;
+}
+
+.arrow-right {
+    width: 10px;
+    height: 10px;
+    background-color: #c04c9c;
+    position: absolute;
+    top: 25px;
+    left: 2%;
+    transform: translate(-50%, -50%) rotate(-135deg);
+}
+
+.arrow-down {
+    width: 10px;
+    height: 10px;
+    background-color: #c04c9c;
+    position: absolute;
+    top: 25px;
+    left: 2%;
+    transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.arrow-mask {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    position: absolute;
+    left: 2px;
+    top: -2px;
+    right: 0;
+    bottom: 0;
+}
+
+.mobile-list {
+    margin: 0;
+    padding: 0;
+    display: block;
+    list-style-type: none;
+}
+
+.mobile-list li {
+    border-bottom: 1px solid #eee;
+    cursor: pointer;
+    font-weight: 100;
+}
+
+.mobile-list li:first-child {
+    background-color: #c04c9c4d;
+    border: none;
+}
+
+.mobile-list li > div {
+    position: relative;
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-evenly;
+}
+
+.details {
+    display: none !important;
+}
+
+.visible-row-items {
+    text-align: center;
+}
+
+.visible-row-item {
+    display: inline-block;
+    text-align: left;
+}
+
+.detail-inner {
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.rating-number {
+    text-indent: 25px;
+}
+
+.detail-inner div p {
+    padding: 0 !important;
+    min-width: 200px;
+}
+
+.detail-inner > div div {
+    text-align: left;
+    display: inline-block;
+}
+
+.detail-inner > .col-1,
+.detail-inner > .col-2,
+.detail-inner > .col-3,
+.detail-inner > .col-4,
+.detail-inner > .col-5,
+.detail-inner > .col-6 {
+    vertical-align: top;
+    height: 100%;
+    justify-content: space-evenly;
+    min-width: 200px;
+}
+
+.detail-inner > .col-1 {
+    padding-left: 0;
+}
+
+.detail-heading {
+    margin-top: 10px;
+    font-weight: 400;
+    margin-bottom: 0;
+    font-size: 16px;
+}
+
+.detailsOpen {
+    display: block !important;
+    max-width: none !important;
+    min-height: 100px;
+    box-sizing: border-box;
+    box-shadow: inset 0 0 4px 1px rgba(0,0,0, 0.4);
+    background-color:  #c04c9c;
+    color: #fff;
+}
+
+.mobile-list li > div p {
+    justify-content: space-evenly;
+    min-width: 200px;
+}
+
+.mobile-list li > p {
+    float: left;
 }
 
 @media only screen and (max-width: 500px) {
@@ -96,57 +228,6 @@
         display: none;
     }
 
-    .mobile-list {
-        margin-top: 20px;
-        display: block;
-        list-style-type: none;
-        padding-left: 25px;
-    }
-
-    .mobile-list li {
-        margin-bottom: 20px;
-        width: 93%;
-        display: inline-block;
-    }
-
-    .admin .page-header h1 {
-        color: #C04C9C;
-    }
-
-    .mobile-list p {
-        margin-bottom: 5px;
-        margin-top: 5px;
-    }
-
-    .mobile-list p span {
-        color: #C04C9C;
-    }
-
-    .mobile-list p {
-        display: inline-block;
-    }
-    .mobile-list p:first-child {
-        width: 80px;
-        font-weight: 400;
-    }
-
-    .mobile-list .list-item div:nth-child(odd) {
-        background-color: #e9e9e9;
-        padding: 3px 10px;
-        border-bottom: 1px solid #fff;
-    }
-
-    .mobile-list .list-item div:nth-child(even) {
-        background-color: #f1f1f1;
-        padding: 3px 10px;
-        border-bottom: 1px solid #fff;
-    }
-
-    .mobile-list h3 {
-        color: #C04C9C;
-        margin: 15px 0 5px 0;
-    }
-
     .export-button {
         padding: 7px 15px;
         border: none;
@@ -155,8 +236,8 @@
         cursor: pointer;
         outline: 0;
         position: absolute;
-        top: 378px;
-        right: 21px;
+        top: 111px;
+        right: 24px;
         color: #c04c9c;
         background: none;
     }
@@ -176,5 +257,64 @@
         color: #fff !important;
         padding: 10px;
         border-radius: 15px;
+    }
+
+    .mobile-list li:first-child {
+        background-color: #fff;
+        border: none;
+    }
+
+    .mobile-list li:last-child {
+        border-bottom: none;
+    }
+
+    .row {
+       border-top: 1px solid #eee;
+        overflow: hidden;
+        padding-left: 42px;
+        display: block;
+    }
+
+    .mobile-list li > div {
+        display: block;
+    }
+
+    .mobile-list {
+        border-top: 1px solid #eee;
+        border-bottom: 1px solid #eee;
+    }
+
+    .name {
+        float: left;
+        min-width: 0;
+    }
+
+    .mobile-list li > div p {
+        min-width: 0;
+    }
+
+    .price {
+        float: right;
+        margin-right: 20px;
+        min-width: 0;
+    }
+
+    .arrow-right {
+        top: 24px;
+        left: 21px;
+    }
+
+    .arrow-down {
+        top: 23px;
+        left: 21px;
+    }
+
+    .detail-inner {
+        display: block;
+        padding: 10px 25px;
+    }
+
+    .detail-inner > div {
+        margin: 0 0 10px 0;
     }
 }
